# fsstds

./: LICENSE  README.md  edits_to_do.rtf  pyproject.toml  requirements.txt
chapters/: Ch.00.Prologue.ipynb  Ch.01.Introduction.ipynb  Ch.02.WranglingI_TheSeries.ipynb  Ch.03.WranglingII_TheDataFrame.ipynb  Ch.04.FileTypes-Copy1.ipynb  Ch.04.FileTypes.ipynb  Ch.05.MergingAndSQL.ipynb  Ch.06.Accessing.ipynb  Ch.07.APIsRedditTwitter.ipynb  Ch.08.ResearchQuestions.ipynb  Ch.09.VisualizingExpectations.ipynb  Ch.10.Cleaning.ipynb  Ch.11.NLP.ipynb  Ch.12.TimeSeries.ipynb  Ch.13.NetworkAnalysis.ipynb  Ch.14.Geography.ipynb  Ch.15.Conclusion.ipynb
data/: Canada - Wikipedia Special Export.xml  Canada - Wikipedia.html  MuppetsTable_broken.csv  MuppetsTable_fixed.csv  MuppetsTable_simple.csv  Popular Indicators.xlsx  World Bank Indicators 2012-2021.xlsx  average_birth_data.csv  covid19db-epidemiology-GBR_PHE.csv.bz2  omdb_Muppet_search_page_1.json  omdb_Oxford_search_page_1.json  omdb_Oxford_search_page_2.json  omdb_Oxford_search_page_3.json  omdb_Oxford_search_page_4.json  omdb_Oxford_search_page_5.json  omdb_Oxford_search_page_6.json  omdb_Oxford_search_page_7.json  omdb_Oxford_search_page_8.json  omdb_Oxford_search_page_9.json
data/avp.stackexchange.com/: PostLinks.xml  Tags.xml
data/gadm36_GBR_shp/: gadm36_GBR_0.dbf  gadm36_GBR_0.shx  gadm36_GBR_1.dbf  gadm36_GBR_1.shx  gadm36_GBR_2.dbf  gadm36_GBR_2.shx  gadm36_GBR_3.dbf  (+1 more)
exercises/: query
supplemental_notebooks/: Ch.00.Stack_downloader.ipynb  Ch.Sup.LaTeX.ipynb  Ch.Sup.VirtualEnvironmentsAndInstalls.ipynb
