[project]
name = "fsstds"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "lxml>=5.3.0",
    "pandas>=2.2.3",
    "pip>=24.2",
    "py7zr>=0.22.0",
    "pyarrow>=17.0.0",
    "requests>=2.32.3",
    "tqdm>=4.66.5",
]
